--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td>
 
-        <img src="C:\Users\yasha\OneDrive\Desktop\Web Development Udemy\Web Development\HTML -personal site\yash.jpg" alt="Yash's Image">
+        <img src="yash.jpg" alt="Yash's Image">
       </td>
       <td>
 
